@@ -1,5 +1,7 @@
 2018-03-30 v0.49 pjacklam
 
+ * Convert t/02pod.t -> t/release-pod.t.
+
  * Increment version number.
 
  * Fix t/option_l.t to match changes in Math::BigInt.
